# AgentOS

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  skills-lock.json
.claude/agents/: README.md  ai-generation-reviewer.md  ai-product-reviewer.md  ambient-embodiment-reviewer.md  art-director.md  brand-identity-designer.md  channels-integration-reviewer.md  content-voice-designer.md  delight-differentiation-designer.md  design-discourse-mediator.md  design-researcher.md  design-technologist.md  determinism-safety-reviewer.md  generative-artist.md  interaction-designer.md  market-differentiation-strategist.md  market-landscape-analyst.md  market-positioning-synthesizer.md  motion-designer.md  personalization-loop-reviewer.md  rater-craft.md  rater-experience.md  rater-feasibility.md  rater-market-fit.md  rater-vision-fit.md  rating-aggregator.md  resource-safety-reviewer.md  responsible-ai-privacy-skeptic.md  reversibility-tx-reviewer.md  rust-performance-reviewer.md  security-reviewer.md  sound-designer.md  ui-accessibility-reviewer.md  ux-reviewer.md  visual-systems-designer.md  wayland-computeruse-reviewer.md
.claude/workflows/: design-council.js
apps/dreaming/: README.md  build_10eros_i2v.py  build_tenstrip_gguf.py  comfy_client.py  dream.sh  krunner_video_runner.py  measure_glimpse_vram.py  start-comfyui.sh  test_aio.py  test_gguf_moe.py  test_i2v_nolight.py
config/: ollama.env
crates/agentosd/: Cargo.toml
crates/agentosd/src/: analyze.rs  coord.rs  feed.rs  governor.rs  gpu.rs  keyhole.rs  lease.rs  main.rs  mcp.rs  queue.rs  rc.rs  rc_throttle.rs  reclaim.rs  scene.rs  scope_reclaim.rs  telemetry.rs  wind.rs
crates/agentosd/src/gpu/: amd.rs
docs/: PRECURSOR-PACK.md  REMOTE-ACCESS.md  cocovox-harvest-backlog.md  vision.md
docs/adr/: 0001-substrate-not-orchestrator.md  0002-thin-gateway-configure-ollama.md  0003-fail-open-supervised.md  0004-graphics-yield-kill-relaunch.md  0005-apply-rollback-transaction.md  0006-hermes-plugin-no-fork.md  0007-cocovox-evaluated-not-adopted.md  0008-dreaming-via-local-video-gen.md  0009-dreaming-shader-primary-video-as-texture.md  0010-vram-coordinator-overnight-batch-lane.md  0011-autonomous-overnight-development-pipeline.md  0012-coordinator-ipc-trust-and-lease-lifecycle.md  0012-keyhole-legibility-instrument.md  0013-coordinator-ipc-trust-and-lease-lifecycle.md  0014-lucid-interactive-branching-dream-loop.md  0015-lucid-mvp-linear-chain-through-the-lease.md  0016-lucid-private-ephemeral-mode.md  (+37 more)
integrations/: README.md  _driver.sh  agentosd-remote.sh  apply-all.sh  components.conf  install.sh  uninstall.sh
spikes/: kwin-mcp-FINDINGS.md
spikes/proxy-fidelity/: Cargo.toml
spikes/proxy-fidelity/src/: main.rs
(+563 files in other folders)
