[package]
name = "agentosd"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "AgentOS resource broker — VRAM coordinator + inference gateway for a single-GPU local-AI box"

[dependencies]
nvml-wrapper = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
