[package]
name = "agentosd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AgentOS resource broker — VRAM coordinator + inference gateway for a single-GPU local-AI box"

[dependencies]
nvml-wrapper = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
# Async runtime for the VRAM coordinator (ADR-0010 §7): select! over the NVML tick,
# owned-child supervision, and signals. monitor/feed keep their blocking loops.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "time", "sync"] }
# D-Bus control plane (ADR-0006): the GPU lease server on the session bus. tokio reactor.
zbus = { version = "5", default-features = false, features = ["tokio"] }
# SIGKILL of a whole process group (kill(-pgid)) so an owned job that forks workers
# (e.g. ComfyUI) is fully reclaimed — review finding R1.
libc = "0.2"
